--- a/Templates/Tasks/downloadArtifact.yaml
+++ b/Templates/Tasks/downloadArtifact.yaml
@@ -2,13 +2,13 @@ steps:
 - task: DownloadBuildArtifacts@1
   inputs:
     buildType: 'specific'
-    project: CT Engineering School 
-    pipeline: CI-pipeline-JeraldinneMolleda
+    project: Swagger-FinalAssessment
+    pipeline: Swagger-CI-JeraldinneMolleda
     specificBuildWithTriggering: false 
     buildVersionToDownload: 'latest' 
     allowPartiallySucceededBuilds: false 
     branchName: 'refs/heads/feature/jeraldinne' 
-    buildId: '368'
+    buildId: '373'
     #tags: # string. Optional. Use when buildType == specific && buildVersionToDownload != specific. Build Tags. 
     downloadType: 'single'
     artifactName: 'drop'
@@ -17,6 +17,6 @@ steps:
   inputs:
     azureSubscription: 'Azure Subscription Academy'
     appType: 'webApp'
-    appName: 'webapp-JeraldinneMolleda'
+    appName: 'UWUDCTPJMWAP07'
     package: '$(System.DefaultWorkingDirectory)/drop'
     deploymentMethod: 'auto'
