--- a/Templates/Stages/Development.yaml
+++ b/Templates/Stages/Development.yaml
@@ -2,6 +2,6 @@ stages:
 - stage: Development
   displayName: DEV
   jobs:
-  - template: ../Jobs/DeployPreview.yaml
+  - template: ../../Templates/Jobs/DeployPreview.yaml
   variables:
-  - template: ../Variables/Development.yaml
+  - template: ../../Templates/Variables/Development.yaml
