--- a/Templates/Tasks/downloadArtifact.yaml
+++ b/Templates/Tasks/downloadArtifact.yaml
@@ -11,12 +11,12 @@ steps:
     buildId: '373'
     #tags: # string. Optional. Use when buildType == specific && buildVersionToDownload != specific. Build Tags. 
     downloadType: 'single'
-    artifactName: 'Devops'
+    artifactName: 'AzureTestProject'
     downloadPath: '$(System.DefaultWorkingDirectory)'
 - task: AzureWebApp@1
   inputs:
     azureSubscription: 'Azure Subscription Academy'
     appType: 'webApp'
     appName: 'UWUDCTPJMWAP07'
-    package: '$(System.DefaultWorkingDirectory)/Devops'
+    package: '$(System.DefaultWorkingDirectory)/AzureTestProject'
     deploymentMethod: 'auto'
