--- a/Templates/Variables/UAT.yaml
+++ b/Templates/Variables/UAT.yaml
@@ -1,5 +1,5 @@
 variables:
-  Environment: 'Development'
+  Environment: 'UAT'
   azureSubscription: 'Azure Subscription Academy'
   appType: 'Web App on Windows'
   appName: 'UWUDCTPJMWAP76'
