--- a/RoundTheCode.AzureTestProject/Properties/launchSettings.json
+++ b/RoundTheCode.AzureTestProject/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://carolinahoerth.azurewebsites.net/"
+      "applicationUrl": "https://uwudctpjmwap76.azurewebsites.net/"
     }
   }
 }
