--- a/Templates/Tasks/Resources/downloadArtifact.yaml
+++ b/Templates/Tasks/Resources/downloadArtifact.yaml
@@ -18,5 +18,5 @@ steps:
     azureSubscription: 'Azure Subscription Academy'
     appType: 'webApp'
     appName: 'UWUDCTPJMWAP76'
-    package: '$(System.DefaultWorkingDirectory)/RoundTheCode.AzureTestProject.zip'
-    deploymentMethod: zipDeploy
+    package: '$(System.DefaultWorkingDirectory)/_Swagger-CI-JeraldinneMolleda/AzureTestProject/RoundTheCode.AzureTestProject.zip'
+    DeploymentType: zipDeploy
