cd azure web app

--- a/Templates/Tasks/Resources/downloadArtifact.yaml
+++ b/Templates/Tasks/Resources/downloadArtifact.yaml
@@ -19,4 +19,4 @@ steps:
     appType: 'webApp'
     appName: 'UWUDCTPJMWAP76'
     package: '$(System.DefaultWorkingDirectory)/_Swagger-CI-JeraldinneMolleda/AzureTestProject/RoundTheCode.AzureTestProject.zip'
-    DeploymentType: zipDeploy
+    deploymentMethod: zipDeploy
