--- a/Templates/Variables/Development.yaml
+++ b/Templates/Variables/Development.yaml
@@ -1,5 +1,7 @@
 variables:
   Environment: 'Development'
+  Location: 'East US'
+  LocationSecondary: 'West US'
   azureSubscription: 'Azure Subscription Academy'
   appType: 'Web App on Windows'
   appName: 'UWUDCTPJMWAP76'
