--- a/Templates/Tasks/Resources/downloadArtifact.yaml
+++ b/Templates/Tasks/Resources/downloadArtifact.yaml
@@ -11,7 +11,7 @@ steps:
     buildId: '373'
     #tags: # string. Optional. Use when buildType == specific && buildVersionToDownload != specific. Build Tags. 
     downloadType: 'single'
-    artifactName: 'AzureTestProject'
+    artifactName: 'Swagger-CD-JeraldinneMolleda'
     downloadPath: '$(System.DefaultWorkingDirectory)'
 
 - task: PowerShell@2
@@ -58,7 +58,7 @@ steps:
     filePath: './$(System.DefaultWorkingDirectory)/_Swagger-CI-JeraldinneMolleda/AzureTestProject/scripts/generateName.ps1'
     arguments: '-Location "East US" -ResourceType "Application Insights" -Environment "DEV"'
     runScriptInSeparateScope: true
-    
+
 - task: AzurePowerShell@5
   displayName: 'Deploy resource application insights'
   inputs:
