--- a/Templates/Tasks/Resources/downloadArtifact.yaml
+++ b/Templates/Tasks/Resources/downloadArtifact.yaml
@@ -11,7 +11,7 @@ steps:
     buildId: '373'
     #tags: # string. Optional. Use when buildType == specific && buildVersionToDownload != specific. Build Tags. 
     downloadType: 'single'
-    artifactName: '_Swagger-CI-JeraldinneMolleda'
+    ArtifactName: 'AzureTestProject'
     downloadPath: '$(System.DefaultWorkingDirectory)'
 
 - task: PowerShell@2
